# ambf_crtk_plugin

./: .gitignore  CMakeLists.txt  README.md  ToDoList.md  launch.yaml  package.xml
ADF/world/: world.yaml
example/: CRTK_config.yaml  CRTK_config_simple.yaml  SRC_config.yaml
example/ADF/: blender-ecm.yaml  blender-mtm.yaml  blender-psm1.yaml  blender-psm2.yaml  ecm.yaml  full_new_psm1.yaml  full_new_psm2.yaml  psm1.yaml  psm2.yaml
example/ADF/test/: default.yaml
example/ADF/test/high_res/: base link.STL  pitch bottom link.STL  pitch end link.STL  pitch top link.STL  tool gripper2 link.STL  tool pitch link.STL
example/ADF/test/low_res/: main insertion link.STL  pitch back link.STL  pitch front link.STL  tool gripper1 link.STL  tool roll link.STL  yaw link.STL
example/assets/dvrk/ecm/high_res/: base link.STL  pitch bottom link.STL  pitch front link.STL  pitch top link.STL  target_fk.STL
example/assets/dvrk/ecm/low_res/: main insertion link.STL  pitch back link.STL  pitch end link.STL  target_ik.STL  tool link.STL  yaw link.STL
example/plguin-config/model_plugin/: full_new_psm1_crtkconfig.yaml  psm1_crtkconfig.yaml  psm2_crtkconfig.yaml
example/plguin-config/simulator_plugin/: CRTK_config_simple.yaml  SRC_config.yaml  fulldvrk_config.yaml
example/plugin-config/model_plugin/: blender-ecm_crtkconfig.yaml  blender-psm1_crtkconfig.yaml  blender-psm2_crtkconfig.yaml  dvrk_ecm_config.yaml  dvrk_jointspace_config copy.yaml  psm1_crtkconfig.yaml  psm2_crtkconfig.yaml
example/plugin-config/simulator_plugin/: CRTK_config.yaml  fulldvrk_config.yaml
example/simulator_plugin/: CRTK_config.yaml  SRC_config.yaml
src/: CRTK_base_plugin.cpp  CRTK_base_plugin.h  CRTK_model_plugin.cpp  CRTK_model_plugin.h  CRTK_object_plugin.cpp  CRTK_object_plugin.h  CRTK_plugin.cpp  CRTK_plugin.h  CRTK_simulator_plugin.cpp  CRTK_simulator_plugin.h  afCRTKInterface.cpp  afCRTKInterface.h
src/model_plugin/: CRTK_model_plugin.cpp  CRTK_model_plugin.h
src/object_plugin/: CRTK_object_plugin.cpp  CRTK_object_plugin.h
src/simulator_plugin/: CRTK_simulator_plugin.cpp  CRTK_simulator_plugin.h
src/utils/: CRTK_base_plugin.cpp  CRTK_base_plugin.h  afCRTKInterface.cpp  afCRTKInterface.h
